fix z-index for Enhancer for YouTube™

--- a/src/content/features/YTDLiveChat/styles/Draggable/Draggable.module.scss
+++ b/src/content/features/YTDLiveChat/styles/Draggable/Draggable.module.scss
@@ -6,4 +6,5 @@
   width: 100%;
   height: 100vh;
   pointer-events: none;
+  z-index: 1000000;
 }
