--- a/src/content/features/YTDLiveChat/styles/YTDLiveChatSetting/DeleteConfirmationModal.module.scss
+++ b/src/content/features/YTDLiveChat/styles/YTDLiveChatSetting/DeleteConfirmationModal.module.scss
@@ -10,7 +10,6 @@
   padding: 16px;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  z-index: 1050;
   outline: none;
   text-align: center;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -23,7 +22,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1040;
+  z-index: 1000001;
 }
 
 .content {
