--- a/src/content/index.scss
+++ b/src/content/index.scss
@@ -1,76 +1,3 @@
-/* -------------------------------- EmojiFix -------------------------------- */
-.yt-live-chat-item-list-renderer {
-  contain: none;
-}
-
-div#menu.yt-live-chat-text-message-renderer {
-  &.custom {
-    right: 0px;
-    z-index: 1;
-    > div {
-      height: 32px;
-      width: 32px;
-
-      > svg {
-        padding: 6px;
-
-        &:hover {
-          background-color: rgba(0, 0, 0, 0.1);
-          border-radius: 1rem;
-        }
-      }
-    }
-  }
-}
-
-div#menu.yt-live-chat-text-message-renderer.custom {
-  > div.tooltip {
-    position: relative;
-    cursor: pointer;
-
-    &:hover {
-      > span.tooltip-text {
-        opacity: 1;
-        visibility: visible;
-      }
-    }
-
-    > svg {
-      color: var(--yt-live-chat-primary-text-color);
-    }
-
-    > span.tooltip-text {
-      opacity: 0;
-      visibility: hidden;
-      position: absolute;
-      left: 50%;
-      transform: translateX(-65%);
-      bottom: 35px;
-      display: inline-block;
-      padding: 5px;
-      white-space: nowrap;
-      font-size: 1rem;
-      line-height: 1.3;
-      background: #333;
-      color: #fff;
-      border-radius: 3px;
-      z-index: 100;
-      pointer-events: none;
-      transition: 0.1s ease-in;
-
-      &::before {
-        content: '';
-        position: absolute;
-        bottom: -9px;
-        left: 65%;
-        margin-left: -5px;
-        border: 5px solid transparent;
-        border-top: 5px solid #333;
-      }
-    }
-  }
-}
-
 /* --------------------------- fullscreen setting --------------------------- */
 ytd-app {
   right: 0 !important;
